--- a/index.html
+++ b/index.html
@@ -940,10 +940,10 @@
                 <a class="btn g-zVPrRFL active hover-grad infinite" href="https://wa.me/message/HFJBJK2YMGJNI1"
                     data-num="5" style=""><b>Whatsapp</b></a>
             </div>
-            <!-- <div class="is-block is-text fit-content block-btn g-XaEoZSU bloco-botao new-block-1 mob-alterado n-responsive"
+            <div class="is-block is-text fit-content block-btn g-XaEoZSU bloco-botao new-block-1 mob-alterado n-responsive"
                 spellcheck="false" data-weightaceitos="400,500,600,700" data-originalpos="581" data-fonte-index="46">
-                <a class="btn g-dndabl9 active hover-grad infinite" href="#" data-num="5" style=""><b>E-book</b></a>
-            </div> -->
+                <a class="btn g-dndabl9 active hover-grad infinite" href="./ebook.html" data-num="5" style=""><b>E-book</b></a>
+            </div> 
             <div class="is-block is-text fit-content g-kUMtTHg new-block-1"
                 data-weightaceitos="200,300,400,600,700,800,900" data-fonte-index="16">
                 <h1 class="g-zLYtvli">Título<br></h1>
@@ -1021,7 +1021,7 @@
 
                 </div>
             </div>
-            <!-- <div class="is-block novo-bloco is-text fit-content overlap g-LargrE6 bloco-imagem new-block-1 mob-alterado n-responsive"
+            <div class="is-block novo-bloco is-text fit-content overlap g-LargrE6 bloco-imagem new-block-1 mob-alterado n-responsive"
                 spellcheck="false" data-height="100" data-originalpos="597">
                 <div class="landingpage-widget-imagem">
 
@@ -1038,7 +1038,7 @@
                         class="g-Dgx1IWC active" id="count-EQw5Uza" data-width="201">
 
                 </div>
-            </div> -->
+            </div> 
         </section>
 
     </main>
